Se procede con el despliegue de las secciones (Proyecto, Amenidades, Planta y Galería) En posteriores commit se harán las optimizaciones del sitio, como el peso de las imagenes y conectar los focus a la galería de imagenes.

--- a/proyecto.html
+++ b/proyecto.html
@@ -20,9 +20,9 @@
 
     <link rel="stylesheet" href="./style/normalize.css?Dic1" />
     <link rel="stylesheet" href="./style/proyecto.css?Dic1" />
-    <link rel="stylesheet" href="./style/medias.css?Dic1" />
     <link rel="stylesheet" href="./style/focus_modal.css?Dic1" />
     <link rel="stylesheet" href="./style/galeria.css?Dic1" />
+    <link rel="stylesheet" href="./style/medias.css?Dic1" />
 
     <!-- Ion Icons -->
     <script
@@ -83,8 +83,9 @@
           src="/img/proyecto/proyecto_maestro_01.jpeg"
           alt="Proyecto Residencial Pacífico Diamante Isla Tortuga"
         />
-        <span id="apublicas" class="profocus"></span>
-        <span id="plantas" class="profocus profocus_1"></span>
+        <!-- focus para abrir el lightbox -->
+        <!-- <span id="apublicas" class="profocus"></span>
+        <span id="plantas" class="profocus profocus_1"></span> -->
       </div>
       <div class="proyecto_descripcion">
         <p>
@@ -234,12 +235,13 @@
             src="/img/proyecto/p1-pb-PhotoRoom.png"
             alt="Planta Tipo Departamento Residencial Pacífico Diamante Isla Tortuga"
           />
-          <span id="room" class="plafocus"></span>
+          <!-- focus para abrir el lightbox -->
+          <!-- <span id="room" class="plafocus"></span>
           <span id="room" class="plafocus plafocus_1"></span>
           <span id="room" class="plafocus plafocus_2"></span>
           <span id="room" class="plafocus plafocus_3"></span>
           <span id="room" class="plafocus plafocus_4"></span>
-          <span id="room" class="plafocus plafocus_5"></span>
+          <span id="room" class="plafocus plafocus_5"></span> -->
         </div>
         <div class="planta_descripcion">
           <h3>Distribución</h3>
@@ -428,7 +430,7 @@
         />
         <img
           loading="lazy"
-          src="/img/proyecto/galeria/club_playa01.jpeg"
+          src="/img/proyecto/galeria/club_playa05.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
@@ -443,9 +445,10 @@
         />
         <img
           loading="lazy"
-          src="/img/proyecto/galeria/club_playa05.jpeg"
+          src="/img/proyecto/galeria/club_playa08.jpg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
+
         <img
           loading="lazy"
           src="/img/proyecto/galeria/club_playa07.jpeg"
@@ -453,7 +456,13 @@
         />
         <img
           loading="lazy"
-          src="/img/proyecto/galeria/club_playa08.jpg"
+          src="/img/proyecto/galeria/club_playa06.jpeg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+
+        <img
+          loading="lazy"
+          src="/img/proyecto/galeria/club_playa01.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
@@ -487,7 +496,7 @@
     </div>
 
     <script src="/js/proyecto.js"></script>
-    <script src="/js/focus.js"></script>
+    <!-- <script src="/js/focus.js"></script> -->
     <script src="/js/galeria.js"></script>
   </body>
 </html>
