Commit desde el master se hizo merge en MASTER de -> Proyecto, se procede a hacer despliegue de la página en hostinger 3 Dic 21

--- a/index.html
+++ b/index.html
@@ -73,12 +73,7 @@
       </header>
 
       <!-- silencio: muted -->
-      <!-- <video id="video" src="/img/IslaTortuga.mp4" muted autoplay loop></video> -->
-      <!-- <img
-        class="img-display-none"
-        src="./img/alberca.jpeg"
-        alt="Residencial Pacífico Diamante, Vista panoramica de las areas verdes, alberca y palapa"
-      /> -->
+      <video id="video" src="/img/IslaTortuga.mp4" muted autoplay loop></video>
 
       <!-- Overlay apoyo para el menú responsive -->
       <div class="overlay"></div>
@@ -94,9 +89,7 @@
           PACÍFICO DIAMANTE, déjate deslumbrar por la belleza del mar y la
           laguna de la Riviera Diamante de Acapulco.
         </p>
-        <a
-          href="https://www.facebook.com/Pac%C3%ADfico-Diamante-103369688852418"
-        >
+        <a href="proyecto.html">
           <span>Ver proyecto</span>
         </a>
       </div>
