Se mejora la UI/UX agregando los botones pulsar en el sembra y en la planta, para que el usuario interactue con el sitio abriendo un Ligthbox al hacer click en los botones de la planta, y en los botones del sembrado envia al usuario a secciones en la página.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <link rel="manifest" href="manifest.webmanifest" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./style/normalize.css?Dic1" />
-    <link rel="stylesheet" href="./style/main.css?Dic1" />
-    <link rel="stylesheet" href="./style/medias.css?Dic1" />
+    <link rel="stylesheet" href="./style/normalize.css?Dic2" />
+    <link rel="stylesheet" href="./style/main.css?Dic2" />
+    <link rel="stylesheet" href="./style/medias.css?Dic2" />
 
     <!-- Ion Icons -->
     <script
@@ -72,8 +72,8 @@
         <div class="btn_menu"></div>
       </header>
 
-      <!-- silencio: muted -->
-      <video id="video" src="/img/IslaTortuga.mp4" muted autoplay loop></video>
+      <!-- Video -->
+      <video id="video" src="/img/IslaTortuga.mp4" muted autoplay></video>
 
       <!-- Overlay apoyo para el menú responsive -->
       <div class="overlay"></div>
@@ -103,11 +103,7 @@
           ></ion-icon>
         </li>
         <li>
-          <ion-icon
-            id="play"
-            class="icon_audio"
-            name="pause-outline"
-          ></ion-icon>
+          <ion-icon id="play" class="icon_audio" name="play-outline"></ion-icon>
         </li>
       </ul>
 
