Ultimo commit en la rama master, se continua con la creación del footer en la rama footer

--- a/proyecto.html
+++ b/proyecto.html
@@ -362,74 +362,60 @@
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/130_Exterior.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/140_Exterior.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/150_Exterior.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/160_Exterior.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/170_Exterior.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/180_Exterior.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/club_playa05.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/club_playa03.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/club_playa04.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/club_playa08.jpg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
 
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/club_playa07.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/club_playa06.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
 
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/club_playa01.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/club_playa09.jpg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
@@ -458,6 +444,8 @@
       </div>
       <button id="btn-cierra" type="button">X</button>
     </div>
+
+    <!-- Sección Footer -->
 
     <!-- Menú responsive - Hamburguesa -->
     <div class="menu">
