Footer completo, solo hace falta poner el link de WhatsApp y Listo se despliega el sitio en hostinger

--- a/proyecto.html
+++ b/proyecto.html
@@ -446,6 +446,110 @@
     </div>
 
     <!-- Sección Footer -->
+    <footer id="contacto">
+      <div class="footer">
+        <div class="contacto">
+          <h2>Contacto</h2>
+          <ul>
+            <li>
+              <a href="">
+                <span class="text_enlaces"> Enviar WhatsApp </span>
+                <span>
+                  <ion-icon
+                    class="icon-whatsapp md hydrated"
+                    name="logo-whatsapp"
+                    role="img"
+                    aria-label="logo whatsapp"
+                  ></ion-icon>
+                </span>
+              </a>
+            </li>
+            <li>
+              <a href="mailto:contacto@pacificodiamante.mx">
+                <span class="text_enlaces"> Enviar correo </span>
+                <span>
+                  <ion-icon
+                    class="icon-mail md hydrated"
+                    name="mail-unread-outline"
+                    role="img"
+                    aria-label="mail unread outline"
+                  ></ion-icon>
+                </span>
+              </a>
+            </li>
+            <li>
+              <a href="https://goo.gl/maps/oNUb7GGhqicSwTGCA">
+                <span class="text_enlaces"> Ver mapa en Google </span>
+                <span>
+                  <ion-icon
+                    class="icon-map md hydrated"
+                    name="navigate-outline"
+                    role="img"
+                    aria-label="navigate outline"
+                  >
+                  </ion-icon>
+                </span>
+              </a>
+            </li>
+            <li>
+              <a href="tel:744-131-6969">
+                <span class="text_enlaces"> Tel. (744) 131 6969</span>
+                <span>
+                  <ion-icon class="icon-fon md hydrated" name="call-outline">
+                  </ion-icon>
+                </span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="enlaces">
+          <h2>Social Media</h2>
+          <!-- Enlaces Redes sociales -->
+          <ul class="social">
+            <li>
+              <a
+                href="https://www.facebook.com/Pac%C3%ADfico-Diamante-103369688852418"
+              >
+                <ion-icon
+                  class="ion_icon facebook"
+                  name="logo-facebook"
+                ></ion-icon>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/pacificodiamantemx/">
+                <ion-icon
+                  class="ion_icon instagram"
+                  name="logo-instagram"
+                ></ion-icon>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.youtube.com/channel/UCddmRmV-KMWkDsHuS8y7Emg"
+              >
+                <ion-icon
+                  class="ion_icon youtube"
+                  name="logo-youtube"
+                ></ion-icon>
+              </a>
+            </li>
+          </ul>
+          <p>Diseño y desarrollo Web</p>
+          <a href="https://webcreativa.mx">
+            <div class="webcreativa">
+              <img src="/img/logo_web.png" alt="webcreativa.mx" />
+            </div>
+          </a>
+        </div>
+        <div class="footer_logo">
+          <img src="/img/logo.png" alt="" />
+        </div>
+      </div>
+      <p class="copi">
+        Copyright | © Pacífico Diamante 2021 Derechos reservados
+      </p>
+    </footer>
 
     <!-- Menú responsive - Hamburguesa -->
     <div class="menu">
