--- a/index.html
+++ b/index.html
@@ -78,9 +78,6 @@
       <!-- Overlay apoyo para el menú responsive -->
       <div class="overlay"></div>
 
-      <!-- Mensaje página en construcción -->
-      <div class="msg"><h2></h2></div>
-
       <!-- Eslogan -->
       <div class="text">
         <h2>Isla Tortuga</h2>
@@ -94,6 +91,7 @@
         </a>
       </div>
 
+      <!-- Controles audio -->
       <ul class="control_audio">
         <li>
           <ion-icon
@@ -107,6 +105,7 @@
         </li>
       </ul>
 
+      <!-- Enlaces Redes sociales -->
       <ul class="social">
         <li>
           <a
