Se concluye con la sección de galria y footer, se mejora la UI/UX en la sección de proyecto y planta Lo unico que falta es la sección de Avance de Obra, se comenzara a hacer en cuanto envien fotos.

--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
             <li><a href="proyecto.html#galeria">Galería</a></li>
             <li><a href="proyecto.html#galeria">Avance de Obra</a></li>
             <li>
-              <a
-                class="menu-link_contacto"
-                href="https://www.facebook.com/Pac%C3%ADfico-Diamante-103369688852418"
+              <a class="menu-link_contacto" href="proyecto.html#contacto"
                 >Contáctanos</a
               >
             </li>
@@ -140,9 +138,7 @@
         <li><a href="proyecto.html#galeria">Galería</a></li>
         <li><a href="proyecto.html#galeria">Avance de Obra</a></li>
         <li>
-          <a
-            class="menu-link_contacto"
-            href="https://www.facebook.com/Pac%C3%ADfico-Diamante-103369688852418"
+          <a class="menu-link_contacto" href="proyecto.html#contacto"
             >Contáctanos</a
           >
         </li>
