--- a/proyecto.html
+++ b/proyecto.html
@@ -63,11 +63,7 @@
           <li><a href="#galeria">Galería</a></li>
           <li><a href="#galeria">Avance de Obra</a></li>
           <li>
-            <a
-              class="menu-link_contacto"
-              href="https://www.facebook.com/Pac%C3%ADfico-Diamante-103369688852418"
-              >Contáctanos</a
-            >
+            <a class="menu-link_contacto" href="#contacto">Contáctanos</a>
           </li>
         </ul>
       </nav>
@@ -83,7 +79,7 @@
           alt="Proyecto Residencial Pacífico Diamante Isla Tortuga"
         />
         <!-- focus para abrir el lightbox -->
-        <a href="#amenidades_proyecto">
+        <a href="#galeria">
           <span class="profocus"></span>
         </a>
         <a href="#planta">
@@ -247,7 +243,7 @@
           <span id="baño" class="plafocus baño"></span>
         </div>
         <div class="planta_descripcion">
-          <h3>Distribución</h3>
+          <h2>Distribución</h2>
           <ul>
             <li>
               <span>
@@ -357,65 +353,79 @@
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          id="amenidades_proyecto"
+          loading="lazy"
           src="/img/proyecto/galeria/120_Exterior.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
+          loading="lazy"
           src="/img/proyecto/galeria/130_Exterior.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
+          loading="lazy"
           src="/img/proyecto/galeria/140_Exterior.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
+          loading="lazy"
           src="/img/proyecto/galeria/150_Exterior.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
+          loading="lazy"
           src="/img/proyecto/galeria/160_Exterior.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
+          loading="lazy"
           src="/img/proyecto/galeria/170_Exterior.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
+          loading="lazy"
           src="/img/proyecto/galeria/180_Exterior.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
+          loading="lazy"
           src="/img/proyecto/galeria/club_playa05.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
+          loading="lazy"
           src="/img/proyecto/galeria/club_playa03.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
+          loading="lazy"
           src="/img/proyecto/galeria/club_playa04.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
+          loading="lazy"
           src="/img/proyecto/galeria/club_playa08.jpg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
 
         <img
+          loading="lazy"
           src="/img/proyecto/galeria/club_playa07.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
+          loading="lazy"
           src="/img/proyecto/galeria/club_playa06.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
 
         <img
+          loading="lazy"
           src="/img/proyecto/galeria/club_playa01.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
+          loading="lazy"
           src="/img/proyecto/galeria/club_playa09.jpg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
@@ -452,7 +462,7 @@
           <h2>Contacto</h2>
           <ul>
             <li>
-              <a href="">
+              <a href="https://wa.me/c/5217441316969">
                 <span class="text_enlaces"> Enviar WhatsApp </span>
                 <span>
                   <ion-icon
@@ -543,7 +553,7 @@
           </a>
         </div>
         <div class="footer_logo">
-          <img src="/img/logo.png" alt="" />
+          <img src="/img/logo.png" alt="Logo Pacífico Diamante" />
         </div>
       </div>
       <p class="copi">
@@ -561,11 +571,7 @@
         <li><a href="#galeria">Galería</a></li>
         <li><a href="#galeria">Avance de Obra</a></li>
         <li>
-          <a
-            class="menu-link_contacto"
-            href="https://www.facebook.com/Pac%C3%ADfico-Diamante-103369688852418"
-            >Contáctanos</a
-          >
+          <a class="menu-link_contacto" href="#contacto">Contáctanos</a>
         </li>
       </ul>
     </div>
