Se crea una función para ocultar los ids de las secciones en la barra de navegación esta dentro del archivo hoverlinks.js

--- a/proyecto.html
+++ b/proyecto.html
@@ -57,13 +57,13 @@
       <nav class="nav_menu">
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="#proyecto">Proyecto</a></li>
-          <li><a href="#amenidades">Amenidades</a></li>
-          <li><a href="#planta">Planta</a></li>
-          <li><a href="#galeria">Galería</a></li>
-          <li><a href="#galeria">Avance de Obra</a></li>
+          <li><a class="link" href="#proyecto">Proyecto</a></li>
+          <li><a class="link" href="#amenidades">Amenidades</a></li>
+          <li><a class="link" href="#planta">Planta</a></li>
+          <li><a class="link" href="#galeria">Galería</a></li>
+          <li><a class="link" href="#galeria">Avance de Obra</a></li>
           <li>
-            <a class="menu-link_contacto" href="#contacto">Contáctanos</a>
+            <a class="menu-link_contacto link" href="#contacto">Contáctanos</a>
           </li>
         </ul>
       </nav>
@@ -79,9 +79,6 @@
           alt="Proyecto Residencial Pacífico Diamante Isla Tortuga"
         />
         <!-- focus para abrir el lightbox -->
-        <a href="#galeria">
-          <span class="profocus"></span>
-        </a>
         <a href="#planta">
           <span class="profocus plantas"></span>
         </a>
@@ -513,7 +510,7 @@
           </ul>
         </div>
         <div class="enlaces">
-          <h2>Social Media</h2>
+          <h2>Redes Sociales</h2>
           <!-- Enlaces Redes sociales -->
           <ul class="social">
             <li>
@@ -565,13 +562,13 @@
     <div class="menu">
       <ul>
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="#proyecto">Proyecto</a></li>
-        <li><a href="#amenidades">Amenidades</a></li>
-        <li><a href="#planta">Planta</a></li>
-        <li><a href="#galeria">Galería</a></li>
-        <li><a href="#galeria">Avance de Obra</a></li>
+        <li><a class="link" href="#proyecto">Proyecto</a></li>
+        <li><a class="link" href="#amenidades">Amenidades</a></li>
+        <li><a class="link" href="#planta">Planta</a></li>
+        <li><a class="link" href="#galeria">Galería</a></li>
+        <li><a class="link" href="#galeria">Avance de Obra</a></li>
         <li>
-          <a class="menu-link_contacto" href="#contacto">Contáctanos</a>
+          <a class="menu-link_contacto link" href="#contacto">Contáctanos</a>
         </li>
       </ul>
     </div>
@@ -582,5 +579,6 @@
     <script src="/js/proyecto.js"></script>
     <script src="/js/focus.js"></script>
     <script src="/js/galeria.js"></script>
+    <script src="/js/hoverlinks.js"></script>
   </body>
 </html>
