Primer commit en la rama 'Avance de Obra', se concluye la sección Avance de obra e implementan mejoras en rendimiento de carga de la página con la optimizaciñon del tamaño del archivo de las imagenes, se mejora la experiencia UX/UI en general.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <link rel="manifest" href="manifest.webmanifest" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./style/normalize.css?Dic2" />
-    <link rel="stylesheet" href="./style/main.css?Dic2" />
-    <link rel="stylesheet" href="./style/medias.css?Dic2" />
+    <link rel="stylesheet" href="./style/normalize.css?Dic3" />
+    <link rel="stylesheet" href="./style/main.css?Dic3" />
+    <link rel="stylesheet" href="./style/medias.css?Dic3" />
 
     <!-- Ion Icons -->
     <script
@@ -55,16 +55,20 @@
         <nav class="nav_menu">
           <ul>
             <!-- <li><a href="#">Inicio</a></li> -->
-            <li><a href="proyecto.html">Proyecto</a></li>
-            <li><a href="proyecto.html#amenidades">Amenidades</a></li>
+            <li>
+              <a class="menu-link_contacto" href="proyecto.html"
+                >Ver Proyecto</a
+              >
+            </li>
+            <!-- <li><a href="proyecto.html#amenidades">Amenidades</a></li>
             <li><a href="proyecto.html#planta">Planta</a></li>
             <li><a href="proyecto.html#galeria">Galería</a></li>
-            <li><a href="proyecto.html#galeria">Avance de Obra</a></li>
+            <li><a href="proyecto.html#avance">Avance de Obra</a></li>
             <li>
               <a class="menu-link_contacto" href="proyecto.html#contacto"
                 >Contáctanos</a
               >
-            </li>
+            </li> -->
           </ul>
         </nav>
         <div class="btn_menu"></div>
@@ -132,16 +136,18 @@
     <div class="menu">
       <ul>
         <!-- <li><a href="index.html">Inicio</a></li> -->
-        <li><a href="proyecto.html">Proyecto</a></li>
-        <li><a href="proyecto.html#amenidades">Amenidades</a></li>
+        <li>
+          <a class="menu-link_contacto" href="proyecto.html">Ver Proyecto</a>
+        </li>
+        <!-- <li><a href="proyecto.html#amenidades">Amenidades</a></li>
         <li><a href="proyecto.html#planta">Planta</a></li>
         <li><a href="proyecto.html#galeria">Galería</a></li>
-        <li><a href="proyecto.html#galeria">Avance de Obra</a></li>
+        <li><a href="proyecto.html#avance">Avance de Obra</a></li>
         <li>
           <a class="menu-link_contacto" href="proyecto.html#contacto"
             >Contáctanos</a
           >
-        </li>
+        </li> -->
       </ul>
     </div>
     <script src="./js/main.js"></script>
