--- a/proyecto.html
+++ b/proyecto.html
@@ -17,11 +17,11 @@
     <link rel="manifest" href="manifest.webmanifest" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./style/normalize.css?Dic2" />
-    <link rel="stylesheet" href="./style/proyecto.css?Dic2" />
-    <link rel="stylesheet" href="./style/focus_modal.css?Dic2" />
-    <link rel="stylesheet" href="./style/galeria.css?Dic2" />
-    <link rel="stylesheet" href="./style/medias.css?Dic2" />
+    <link rel="stylesheet" href="./style/normalize.css?Dic3" />
+    <link rel="stylesheet" href="./style/proyecto.css?Dic3" />
+    <link rel="stylesheet" href="./style/focus_modal.css?Dic3" />
+    <link rel="stylesheet" href="./style/galeria.css?Dic3" />
+    <link rel="stylesheet" href="./style/medias.css?Dic3" />
 
     <!-- Ion Icons -->
     <script
@@ -61,7 +61,7 @@
           <li><a class="link" href="#amenidades">Amenidades</a></li>
           <li><a class="link" href="#planta">Planta</a></li>
           <li><a class="link" href="#galeria">Galería</a></li>
-          <li><a class="link" href="#galeria">Avance de Obra</a></li>
+          <li><a class="link" href="#avance">Avance de Obra</a></li>
           <li>
             <a class="menu-link_contacto link" href="#contacto">Contáctanos</a>
           </li>
@@ -72,16 +72,16 @@
 
     <!-- Sección Proyecto -->
     <section id="proyecto" class="container proyecto">
-      <h1>Etapa Isla Tortuga</h1>
+      <h1>Isla Tortuga</h1>
       <div class="proyecto_img">
         <img
           src="/img/proyecto/sembrado.jpeg"
           alt="Proyecto Residencial Pacífico Diamante Isla Tortuga"
         />
         <!-- focus para abrir el lightbox -->
-        <a href="#planta">
-          <span class="profocus plantas"></span>
-        </a>
+        <div class="profocus plantas">
+          <a class="link" href="#planta">Panta </a>
+        </div>
       </div>
       <div class="proyecto_descripcion">
         <p>
@@ -98,7 +98,7 @@
     <!-- Sección Amenidades -->
     <section id="amenidades" class="container amenidades">
       <h1>Amenidades</h1>
-      <div class="amenidades__container">
+      <main class="amenidades__container">
         <div class="amenidades__container-funo">
           <ul>
             <li>
@@ -219,13 +219,13 @@
             </li>
           </ul>
         </div>
-      </div>
+      </main>
     </section>
 
     <!-- Sección Planta -->
     <section id="planta" class="container planta">
       <h1>Planta Tipo</h1>
-      <div class="container__planta">
+      <main class="container__planta">
         <div class="planta_img">
           <img
             src="/img/proyecto/p1-pb-PhotoRoom.png"
@@ -287,7 +287,7 @@
             </li>
           </ul>
         </div>
-      </div>
+      </main>
     </section>
 
     <!-- focus - Ligthbox planta  -->
@@ -299,7 +299,7 @@
     <!-- Sección Galería -->
     <section id="galeria" class="container galeria">
       <h1>galería</h1>
-      <div id="galery">
+      <main id="galery">
         <img
           src="/img/proyecto/galeria/1_Interior.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
@@ -317,7 +317,7 @@
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          src="/img/proyecto/galeria/5_Interior.jpg"
+          src="/img/proyecto/galeria/8_Interior.jpg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
@@ -329,7 +329,7 @@
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          src="/img/proyecto/galeria/8_Interior.JPG"
+          src="/img/proyecto/galeria/5_Interior.JPG"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
@@ -350,83 +350,56 @@
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/120_Exterior.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/130_Exterior.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/140_Exterior.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/150_Exterior.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/160_Exterior.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
+
         <img
-          loading="lazy"
-          src="/img/proyecto/galeria/170_Exterior.jpeg"
-          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
-        />
-        <img
-          loading="lazy"
-          src="/img/proyecto/galeria/180_Exterior.jpeg"
-          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
-        />
-        <img
-          loading="lazy"
           src="/img/proyecto/galeria/club_playa05.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/club_playa03.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
-          src="/img/proyecto/galeria/club_playa04.jpeg"
-          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
-        />
-        <img
-          loading="lazy"
-          src="/img/proyecto/galeria/club_playa08.jpg"
-          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
-        />
-
-        <img
-          loading="lazy"
           src="/img/proyecto/galeria/club_playa07.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
-          src="/img/proyecto/galeria/club_playa06.jpeg"
+          src="/img/proyecto/galeria/club_playa04.jpeg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
 
         <img
-          loading="lazy"
-          src="/img/proyecto/galeria/club_playa01.jpeg"
+          src="/img/proyecto/galeria/club_playa08.jpg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
         <img
-          loading="lazy"
           src="/img/proyecto/galeria/club_playa09.jpg"
           alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
         />
-      </div>
+        <img
+          src="/img/proyecto/galeria/club_playa01.jpeg"
+          alt="Galería de Imagenes de Pacífico Diamante Etapa Isla Tortuga"
+        />
+      </main>
     </section>
 
     <!-- Ligthbox Galería -->
@@ -451,6 +424,46 @@
       </div>
       <button id="btn-cierra" type="button">X</button>
     </div>
+
+    <!-- Sección Avance de Obra -->
+    <section id="avance" class="container avance">
+      <h1>Avance de Obra</h1>
+      <h2>Enero – Diciembre 2021</h2>
+      <main id="galery" class="mb-2">
+        <img
+          id="img_01"
+          src="/img/proyecto/avance/11210_Exterior.jpeg"
+          alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          id="img_02"
+          src="/img/proyecto/avance/12211_Exterior.jpeg"
+          alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          id="img_03"
+          src="/img/proyecto/avance/12212_Exterior.jpeg"
+          alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga"
+        />
+      </main>
+
+      <!-- subsección 2 para continuar con el vance de obra en el 2022 (ene - mar 2022) -->
+      <!-- <h2>Enero – Marzo 2022</h2>
+      <main id="galery" class="mb-2">
+        <img
+          src="/img/proyecto/avance/11210_Exterior.jpeg"
+          alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          src="/img/proyecto/avance/12211_Exterior.jpeg"
+          alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga"
+        />
+        <img
+          src="/img/proyecto/avance/12212_Exterior.jpeg"
+          alt="Avance de Obra de Pacífico Diamante Etapa Isla Tortuga"
+        />
+      </main> -->
+    </section>
 
     <!-- Sección Footer -->
     <footer id="contacto">
@@ -566,7 +579,7 @@
         <li><a class="link" href="#amenidades">Amenidades</a></li>
         <li><a class="link" href="#planta">Planta</a></li>
         <li><a class="link" href="#galeria">Galería</a></li>
-        <li><a class="link" href="#galeria">Avance de Obra</a></li>
+        <li><a class="link" href="#avance">Avance de Obra</a></li>
         <li>
           <a class="menu-link_contacto link" href="#contacto">Contáctanos</a>
         </li>
