Se procede a hacer el despliegue en HOSTINGER 9-dic-21 16:07pm En este punto el sitio web esta completo y optimizado de acuerdo a los requerimientos del cliente.

--- a/proyecto.html
+++ b/proyecto.html
@@ -231,6 +231,12 @@
             src="/img/proyecto/p1-pb-PhotoRoom.png"
             alt="Planta Tipo Departamento Residencial Pacífico Diamante Isla Tortuga"
           />
+          <div class="planta_medidas">
+            <span>
+              <ion-icon class="size" name="move-outline"></ion-icon>
+            </span>
+            <p>Desde 137 m<span class="m2">2</span> de superficie</p>
+          </div>
           <!-- focus para abrir el lightbox -->
           <span id="sala" class="plafocus"></span>
           <span id="recamara" class="plafocus recamara"></span>
