--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <link rel="manifest" href="manifest.webmanifest" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./style/normalize.css?Dic3" />
-    <link rel="stylesheet" href="./style/main.css?Dic3" />
-    <link rel="stylesheet" href="./style/medias.css?Dic3" />
+    <link rel="stylesheet" href="./style/normalize.css?Dic4" />
+    <link rel="stylesheet" href="./style/main.css?Dic4" />
+    <link rel="stylesheet" href="./style/medias.css?Dic4" />
 
     <!-- Ion Icons -->
     <script
@@ -56,11 +56,9 @@
           <ul>
             <!-- <li><a href="#">Inicio</a></li> -->
             <li>
-              <a class="menu-link_contacto" href="proyecto.html"
-                >Ver Proyecto</a
-              >
+              <a href="proyecto.html">Ver Proyecto</a>
             </li>
-            <!-- <li><a href="proyecto.html#amenidades">Amenidades</a></li>
+            <li><a href="proyecto.html#amenidades">Amenidades</a></li>
             <li><a href="proyecto.html#planta">Planta</a></li>
             <li><a href="proyecto.html#galeria">Galería</a></li>
             <li><a href="proyecto.html#avance">Avance de Obra</a></li>
@@ -68,7 +66,7 @@
               <a class="menu-link_contacto" href="proyecto.html#contacto"
                 >Contáctanos</a
               >
-            </li> -->
+            </li>
           </ul>
         </nav>
         <div class="btn_menu"></div>
@@ -137,9 +135,9 @@
       <ul>
         <!-- <li><a href="index.html">Inicio</a></li> -->
         <li>
-          <a class="menu-link_contacto" href="proyecto.html">Ver Proyecto</a>
+          <a href="proyecto.html">Ver Proyecto</a>
         </li>
-        <!-- <li><a href="proyecto.html#amenidades">Amenidades</a></li>
+        <li><a href="proyecto.html#amenidades">Amenidades</a></li>
         <li><a href="proyecto.html#planta">Planta</a></li>
         <li><a href="proyecto.html#galeria">Galería</a></li>
         <li><a href="proyecto.html#avance">Avance de Obra</a></li>
@@ -147,7 +145,7 @@
           <a class="menu-link_contacto" href="proyecto.html#contacto"
             >Contáctanos</a
           >
-        </li> -->
+        </li>
       </ul>
     </div>
     <script src="./js/main.js"></script>
