Se modifico la palabra humeda por húmeda, se procede con despliegue del sitio web completo en Hostinger 10-dic-2021

--- a/proyecto.html
+++ b/proyecto.html
@@ -276,7 +276,7 @@
               <span>
                 <ion-icon name="checkmark-outline"></ion-icon>
               </span>
-              Increíble terraza con zona humeda
+              Increíble terraza con zona húmeda
             </li>
             <li>
               <span>
