Se procede a realiar el 5to despliegue del sitio wen, quedando completo y funcionando al 100, Las mejoras en ese commit son: backgroun de caracoles, margin responsives en h1 optimizados, tamaño de imagen proyecto mas pequeña

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <link rel="manifest" href="manifest.webmanifest" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./style/normalize.css?Dic4" />
-    <link rel="stylesheet" href="./style/main.css?Dic4" />
-    <link rel="stylesheet" href="./style/medias.css?Dic4" />
+    <link rel="stylesheet" href="./style/normalize.css?Dic5" />
+    <link rel="stylesheet" href="./style/main.css?Dic5" />
+    <link rel="stylesheet" href="./style/medias.css?Dic5" />
 
     <!-- Ion Icons -->
     <script
@@ -129,6 +129,12 @@
         </li>
       </ul>
     </section>
+
+    <div class="whatsapp">
+      <a href="https://wa.me/c/5217441316969">
+        <ion-icon name="logo-whatsapp"></ion-icon>
+      </a>
+    </div>
 
     <!-- Menú responsive - Hamburguesa -->
     <div class="menu">
