--- a/proyecto.html
+++ b/proyecto.html
@@ -17,11 +17,11 @@
     <link rel="manifest" href="manifest.webmanifest" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./style/normalize.css?Dic4" />
-    <link rel="stylesheet" href="./style/proyecto.css?Dic4" />
-    <link rel="stylesheet" href="./style/focus_modal.css?Dic4" />
-    <link rel="stylesheet" href="./style/galeria.css?Dic4" />
-    <link rel="stylesheet" href="./style/medias.css?Dic4" />
+    <link rel="stylesheet" href="./style/normalize.css?Dic5" />
+    <link rel="stylesheet" href="./style/proyecto.css?Dic5" />
+    <link rel="stylesheet" href="./style/focus_modal.css?Dic5" />
+    <link rel="stylesheet" href="./style/galeria.css?Dic5" />
+    <link rel="stylesheet" href="./style/medias.css?Dic5" />
 
     <!-- Ion Icons -->
     <script
@@ -576,6 +576,12 @@
         Copyright | © Pacífico Diamante 2021 Derechos reservados
       </p>
     </footer>
+
+    <div class="whatsapp">
+      <a href="https://wa.me/c/5217441316969">
+        <ion-icon name="logo-whatsapp"></ion-icon>
+      </a>
+    </div>
 
     <!-- Menú responsive - Hamburguesa -->
     <div class="menu">
