Se hacen cambios en el video y en los controles del video (play y muted) se hacen cambios en algunas clases en el whatsapp y se incorpora un nuevo archivo de .htaccess para ocultar la extension .html en la barra del navegador

--- a/proyecto.html
+++ b/proyecto.html
@@ -578,7 +578,7 @@
     </footer>
 
     <div class="whatsapp">
-      <a href="https://wa.me/c/5217441316969">
+      <a target="_blanck" href="https://wa.me/c/5217441316969">
         <ion-icon name="logo-whatsapp"></ion-icon>
       </a>
     </div>
