--- a/index.html
+++ b/index.html
@@ -73,7 +73,14 @@
       </header>
 
       <!-- Video -->
-      <video id="video" src="/img/IslaTortuga.mp4" muted autoplay></video>
+      <video
+        id="video"
+        src="/img/Secuencia01.mp4"
+        muted
+        controls
+        autoplay
+        poster="/img/alberca.jpeg"
+      ></video>
 
       <!-- Overlay apoyo para el menú responsive -->
       <div class="overlay"></div>
@@ -92,7 +99,7 @@
       </div>
 
       <!-- Controles audio -->
-      <ul class="control_audio">
+      <!-- <ul class="control_audio">
         <li>
           <ion-icon
             id="muted"
@@ -101,21 +108,29 @@
           ></ion-icon>
         </li>
         <li>
-          <ion-icon id="play" class="icon_audio" name="play-outline"></ion-icon>
+          <ion-icon
+            id="play"
+            class="icon_audio"
+            name="pause-outline"
+          ></ion-icon>
         </li>
-      </ul>
+      </ul> -->
 
       <!-- Enlaces Redes sociales -->
       <ul class="social">
         <li>
           <a
+            target="_blanck"
             href="https://www.facebook.com/Pac%C3%ADfico-Diamante-103369688852418"
           >
             <ion-icon class="ion_icon" name="logo-facebook"></ion-icon>
           </a>
         </li>
         <li>
-          <a href="https://www.instagram.com/pacificodiamantemx/">
+          <a
+            target="_blanck"
+            href="https://www.instagram.com/pacificodiamantemx/"
+          >
             <ion-icon
               class="ion_icon instagram"
               name="logo-instagram"
@@ -123,7 +138,10 @@
           </a>
         </li>
         <li>
-          <a href="https://www.youtube.com/channel/UCddmRmV-KMWkDsHuS8y7Emg">
+          <a
+            target="_blanck"
+            href="https://www.youtube.com/channel/UCddmRmV-KMWkDsHuS8y7Emg"
+          >
             <ion-icon class="ion_icon youtube" name="logo-youtube"></ion-icon>
           </a>
         </li>
@@ -131,7 +149,7 @@
     </section>
 
     <div class="whatsapp">
-      <a href="https://wa.me/c/5217441316969">
+      <a target="_blanck" href="https://wa.me/c/5217441316969">
         <ion-icon name="logo-whatsapp"></ion-icon>
       </a>
     </div>
