Se terminan de hacer los cambios en el sitio web, dejandolo optimo

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <link rel="manifest" href="manifest.webmanifest" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./style/normalize.css?Dic5" />
-    <link rel="stylesheet" href="./style/main.css?Dic5" />
-    <link rel="stylesheet" href="./style/medias.css?Dic5" />
+    <link rel="stylesheet" href="./style/normalize.css?Ene2" />
+    <link rel="stylesheet" href="./style/main.css?Ene2" />
+    <link rel="stylesheet" href="./style/medias.css?Ene2" />
 
     <!-- Ion Icons -->
     <script
@@ -96,6 +96,13 @@
         <a href="proyecto.html">
           <span>Ver proyecto</span>
         </a>
+      </div>
+
+      <div class="mensaje_video">
+        <p>
+          Para una mejor experiencia de video, coloca tu móvil de forma
+          horizontal
+        </p>
       </div>
 
       <!-- Controles audio -->
