--- a/proyecto.html
+++ b/proyecto.html
@@ -17,11 +17,11 @@
     <link rel="manifest" href="manifest.webmanifest" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./style/normalize.css?Dic5" />
-    <link rel="stylesheet" href="./style/proyecto.css?Dic5" />
-    <link rel="stylesheet" href="./style/focus_modal.css?Dic5" />
-    <link rel="stylesheet" href="./style/galeria.css?Dic5" />
-    <link rel="stylesheet" href="./style/medias.css?Dic5" />
+    <link rel="stylesheet" href="./style/normalize.css?Ene2" />
+    <link rel="stylesheet" href="./style/proyecto.css?Ene2" />
+    <link rel="stylesheet" href="./style/focus_modal.css?Ene2" />
+    <link rel="stylesheet" href="./style/galeria.css?Ene2" />
+    <link rel="stylesheet" href="./style/medias.css?Ene2" />
 
     <!-- Ion Icons -->
     <script
